#10528 - Remove warnings from idempiere-13 upgrade